Fix to a problem with the scrollimgs not overflowing correctly see screenshot: http://ubuntuone.com/64DkUdOUsZIXbdaIQYO732

--- a/styles/style.css
+++ b/styles/style.css
@@ -277,7 +277,6 @@ body, #body, #Body, #form, #Form {
 }
 #Outer {
 	background: #fff;
-	display: table;
 	margin: 0 auto;
 	padding: 0 15px;
 }
